<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.example.com.brapolar.Activities.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Switch
                android:text="@string/option_track_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/track_call" />

            <Switch
                android:text="@string/option_track_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/track_msg" />

            <Switch
                android:text="@string/option_track_sig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/track_sig" />

            <Switch
                android:text="@string/option_track_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/track_app" />

            <Switch
                android:text="@string/option_track_accelerometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/track_accelerometer" />

            <Switch
                android:text="@string/option_track_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/track_light" />

            <Button
                android:text="@string/option_calibrate_keyboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/calibrate_keyboard_btn" />
            <Button
                android:text="@string/option_set_alarmMood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/set_alarm_btn"
                android:onClick="TimePicker"/>
            <Button
                android:text="@string/option_set_alarmSleep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/set_alarmSleep_btn"
                android:onClick="TimePickerSleep"/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
