<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/action_chat"
        android:title="Enviar"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_send_black_24dp"
        android:onClick="SendActivity"
        />
    <item android:title="options"
        app:showAsAction="always"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        >
        <menu>
            <item android:id="@+id/action_settings"
                android:title="@string/action_settings"
                android:orderInCategory="100"
                android:icon="@drawable/settings"/>
            <item android:id="@+id/action_about"
                android:title="@string/action_about"
                android:icon="@drawable/ic_people_black_24dp"
                android:orderInCategory="100" />
            <item android:id="@+id/action_contact"
                android:title="@string/action_contact"
                android:icon="@drawable/contact"
                android:orderInCategory="100" />
            <item android:id="@+id/action_logout"
                android:title="@string/action_sair"
                android:icon="@drawable/logout_dark"
                android:orderInCategory="100" />

        </menu>
    </item>

    <!--
    <item android:id="@+id/icon_add"
        android:icon="@drawable/ic_add"
        android:title="@string/infoEdit"
        app:showAsAction="always" />
    <item android:id="@+id/icon_save"
        android:icon="@drawable/ic_save"
        android:title="@string/infoSave"
        app:showAsAction="always" />
    <item android:id="@+id/icon_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/infoDelete"
        app:showAsAction="always" />
         -->
</menu>